css/footer.css
.footer_navbar {
  display: flex;
  margin-top: 60px;
  border-bottom: 1px solid #e5e5e5;
}
.footer_logo {
  width: 112px;
  height: 112px;
  margin-right: 190px;
  margin-top: 28px;
}
.footer_logo img {
  width: 100%;
  height: 100%;
}
.footer_navbar_menu {
  display: flex;
  align-items: flex-start;
  gap: 180px;
  padding-bottom: 48px;
}
.ul_navbar {
}
.menu_li:first-child {
  font-weight: 400;
  font-size: 25px;
  line-height: 29px;
  color: #292d32;
  margin-bottom: 15px;
}
.menu_li {
  margin-bottom: 10px;
  font-size: 16px;
  line-height: 19px;
  display: flex;
  align-items: center;
}
.footer_info {
  display: flex;
  margin-top: 40px;
  gap: 153px;
}
.info {
  display: flex;
  flex-direction: column;
  gap: 11px;
}
.info_title {
  font-weight: 400;
  font-size: 16px;
  line-height: 133.69%;
  color: #838383;
}
.info_text {
  font-weight: 400;
  font-size: 18px;
  line-height: 150%;
  color: #292d32;
}
.info_social_icons {
  margin-top: 7px;
}

